<resources>
    <string name="app_name">E Shop</string>
    <string name="action_settings">Settings</string>

    <!-- Nav Drawer related strings BEGIN -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_home">Home</string>
    <string name="action_information">My Information</string>
    <string name="user_role">My Role</string>
    <string name="action_information_other">Others</string>
    <string name="action_addresses">My Addresses</string>
    <string name="action_orders">My Orders</string>
    <string name="action_order_details">Order Details</string>
    <string name="action_cart">My Cart</string>
    <string name="action_order_history">My Orders</string>
    <string name="action_choose_address">Choose Address</string>
    <string name="action_my_address">My Addresses</string>
    <string name="action_edit_address">Edit Address</string>
    <string name="action_add_address">Add Address</string>
    <string name="action_other">Others</string>
    <string name="action_help_support">Help &amp; Support</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="action_role">Normal</string>
    <string name="action_view_cart">View Cart</string>
    <string name="action_search">Search</string>
    <string name="action_expand">Expand</string>
    <string name="action_collapse">Collapse</string>
    <string name="action_wishlist">Wishlist</string>
    <!-- Nav Drawer related strings END -->

    <!-- Network & Location Strings BEGIN -->
    <string name="network_alert_title">Internet Connection Disabled</string>
    <string name="network_alert_message">Turn on Internet Connection</string>
    <string name="location_alert_title">Location off!</string>
    <string name="location_alert_message">Turn on location</string>
    <!-- Network & Location Strings END -->

    <!-- Activities & Fragments related strings BEGIN -->
    <string name="title_login_activity">Welcome</string>
    <string name="title_login_fragment">Login</string>
    <string name="title_register_fragment">Register</string>
    <!-- Activities & Fragments related strings END -->

    <!-- Login Activity related strings BEGIN -->
    <string name="login_mobile_no">Mobile Number</string>
    <string name="login_password">Password</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_email">Email Address</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_country">Country</string>
    <string name="register_state">State</string>
    <string name="register_city">City</string>
    <!-- Login Activity related strings END -->

    <!-- Internet Connection related string BEGIN -->
    <string name="device_offline">Turn on Internet Connection</string>

    <!-- Internet Connection related string END -->

    <!-- Dummy strings BEGIN -->
    <string name="cat_1">Household Needs</string>
    <string name="cat_2">Fitness Devices</string>
    <string name="cat_3">Vegetables</string>
    <string name="delivery_by">Delivery by</string>
    <string name="delivery_in">Delivery in</string>
    <string name="delivery_time">Today</string>
    <string name="dummy_location">Hill Drive, Bhavnagar</string>
    <string name="add_to_cart">Add</string>
    <string name="cart">Cart</string>
    <string name="select_quantity">Quantity</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="no_item">No Items found</string>
    <string name="order_successfully_placed">Order has been successfully placed. Estimated arrival time is 45                              minute
    </string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="server_problem">There is some server problem</string>
    <!-- Dummy strings END -->

    <!-- Search fragment's strings BEGIN -->
    <string name="search_hint">Search your Item</string>
    <string name="search_clear">Clear</string>
    <!-- Search fragment's strings END -->

    <!-- Order fragment's strings BEGIN -->
    <string name="order_id">Order ID:</string>
    <string name="order_date">Date:</string>
    <string name="order_price">Price:</string>
    <string name="order_status">Status:</string>
    <!-- Order fragment's strings END -->

    <!-- Intro Activity's strings BEGIN -->
    <string name="slide_1_african_story_books">New African Story Books</string>
    <string name="slide_2_volunteer_professionals">Created by Volunteer Professionals</string>
    <string name="slide_3_download_and_go">Download and Read on the go</string>
    <string name="slide_4_different_languages">Available in different languages</string>
    <string name="slide_1_african_story_books_subtitle">That anyone can freely translate and distribute.</string>
    <string name="slide_2_volunteer_professionals_subtitle">On a single day, designers, writers and illustrators meet to create cool books.</string>
    <string name="slide_3_download_and_go_subtitle">On the bus, in a train, wherever you are - the books are there too.</string>
    <string name="slide_4_different_languages_subtitle">English, Zulu, Afrikaans, Xhosa and more!</string>
    <!-- Intro Activity's strings END -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="empty_cart">Your cart is empty</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.
    </string>

    <string name="app_upgrade"> Upgrade the app for better experience!</string>


    <!-- Strings related to server response -->

    <string name="forbidden">You are not logged in.</string>
    <string name="cant_connect_to_server">Couldn\'t reach to server</string>
    <string name="complaint_to_admin">Try to connect to admin.</string>

    <!--strings for UI of Ops base screen to show orders-->
    <string name="Order_date">  Date</string>
    <string name="Order_id">Order ID</string>
    <string name="Order_status">Status</string>
    <string name="Order_info_and_phone_no">Locality/PhoneNo.</string>


</resources>
