<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gripxtech.kasimrangwala.grophers.MainActivity">

    <group
        android:id="@+id/action_group1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_home"
            android:icon="@mipmap/ic_smartphone_black_24dp"
            android:title="@string/action_home" />
    </group>

    <group
        android:id="@+id/action_group2"
        android:checkableBehavior="none">
        <item android:title="@string/action_information">
            <menu>
                <item
                    android:id="@+id/action_login"
                    android:icon="@mipmap/ic_person_black_24dp"
                    android:title="@string/action_login" />
                <item
                    android:id="@+id/action_addresses"
                    android:icon="@mipmap/ic_location_on_black_24dp"
                    android:title="@string/action_addresses" />
                <item
                    android:id="@+id/action_orders"
                    android:icon="@mipmap/ic_restore_black_24dp"
                    android:title="@string/action_orders" />
                <item
                    android:id="@+id/action_cart"
                    android:icon="@mipmap/ic_local_grocery_store_black_24dp"
                    android:title="@string/action_cart" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/action_group3"
        android:checkableBehavior="none">
        <item android:title="@string/action_information">
            <menu>
                <item
                    android:id="@+id/action_rate"
                    android:icon="@mipmap/ic_star_border_black_24dp"
                    android:title="@string/action_rate" />
                <item
                    android:id="@+id/action_share"
                    android:icon="@mipmap/ic_share_black_24dp"
                    android:title="@string/action_share" />
                <item
                    android:id="@+id/action_logout"
                    android:icon="@mipmap/ic_person_black_24dp"
                    android:title="@string/action_logout" />
            </menu>
        </item>
    </group>

</menu>
