<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clRootLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.grocery.hr.lalajikidukan.fragments.LoginFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etLoginMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:drawablePadding="8dp"

                    android:hint="@string/login_mobile_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etLoginPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:drawablePadding="8dp"

                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>
                <!--android:drawableStart="@drawable/ic_vpn_key_black_24dp"-->
                <!-- android:drawableLeft="@drawable/ic_vpn_key_black_24dp"-->


            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:enabled="false"
                android:minHeight="?attr/actionBarSize"
                android:text="@string/title_login_fragment"
               <!-- android:textColor="@color/icons"-->
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
