<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:include="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center">

            <TextView
                android:id="@+id/text_time"
                android:text="12:12:12 AM"
                include:ignore="HardcodedText"
                android:gravity="center"
                style="@style/TextView_Ops_Order_Formatting" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order_date"
               style="@style/TextView_Ops_Order_Formatting1"
                android:text="@string/order_date"
                />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                style="@style/TextView_Ops_Order_Formatting1"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@id/order_date"
                android:text="fill the time here"
                android:textStyle="normal" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order_id"
                style="@style/TextView_Ops_Order_Formatting1"
                android:text="@string/order_id" />

            <TextView
                android:id="@+id/text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextView_Ops_Order_Formatting1"
                android:layout_toRightOf="@id/order_id"
                android:textStyle="normal"
                android:text="fill the orderid here"
               />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_status"
                style="@style/TextView_Ops_Order_Formatting1"
                android:text="@string/order_status"
                 />

            <TextView
                android:id="@+id/text_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@id/order_status"
                android:padding="2.5dp"
                android:text="fill the status here"
                android:textSize="12sp"
                android:textStyle="normal"
                include:ignore="HardcodedText" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/local_info"
                style="@style/TextView_Ops_Order_Formatting1"
                android:text="@string/Order_info_and_phone_no" />

            <TextView
                android:id="@+id/text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@id/local_info"
                android:padding="2.5dp"
                android:text="fill the time here"
                android:textSize="12sp"
                android:textStyle="normal" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:text="check"
                    include:ignore="HardcodedText" />

                <RadioButton
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:text="remove" />

            </RadioGroup>

            <Button
                android:id="@+id/checkout_from_placedstate"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#8bc34a"
                android:gravity="center"
                android:text="Checkout"
                include:ignore="HardcodedText" />


        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>